# easy-file

./: Cargo.toml
examples/: test.rs
src/: client_opt.rs  error.rs  file.rs  file_opt.rs  lib.rs
src/cache/: disk.rs  mod.rs
src/dsptype/: mod.rs  types.rs
src/protocols/: ftp.rs  mod.rs  s3.rs  smb.rs
