[package]
name = "easy-file"
version = "0.1.0"
authors = ["jhon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-rust = { path = "../aws-sdk-rust"}
lsio = "0"
chrono = "0.2"
httparse = "1"
hyper = "0.10"
hyper-openssl = "0.2"
log = "0.3.6"
openssl = "0.9"
regex = "0.1"
rustc-serialize = "0.3"
# Credentials use serde
serde = "0.8"
serde_json = "0.8"
time = "0.1"
url = "1.2"
xml-rs = "0"
crypto-hash = "0"

#[dev-dependencies]
# NOTE: term is only used for the example
term = "0.4"
md5 = "0.3"